Fixed issue where aligning card buttons to the left caused it to not appear on the card. Added two column layout to projects.

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -58,10 +58,6 @@ body {
   flex: 1 1 auto;
 }
 
-a {
-  float: left;
-}
-
-md-card-actions {
+mat-card-actions {
   display: inline-block;
 }
